--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,9 @@
     <description>Demo project for Spring Boot</description>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
         <spring-boot-admin.version>2.1.4</spring-boot-admin.version>
+        <docker.image.prefix>imperator-admin</docker.image.prefix>
     </properties>
 
     <dependencies>
@@ -71,13 +72,24 @@
         </dependencies>
     </dependencyManagement>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-
+   <build>
+       <plugins>
+           <plugin>
+               <groupId>com.spotify</groupId>
+               <artifactId>docker-maven-plugin</artifactId>
+               <version>0.4.13</version>
+               <configuration>
+                   <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+                   <dockerDirectory>src/main/docker</dockerDirectory>
+                   <resources>
+                       <resource>
+                           <targetPath>/</targetPath>
+                           <directory>${project.build.directory}</directory>
+                           <include>${project.build.finalName}.jar</include>
+                       </resource>
+                   </resources>
+               </configuration>
+           </plugin>
+       </plugins>
+   </build>
 </project>
